# Pymacs

./: CMakeLists.txt
assets/: testFileText
src/: Buffer.cpp  Buffer.h  Editor.cpp  Editor.h  PlatformLayer.h  Viewport.cpp  Viewport.h  main.cpp  python.cpp  python.h
src/SDL2/: SDL2Layer.cpp  SDL2Layer.h  Timer.cpp  Timer.h
src/python/: global-keymap.py
